Language issues fixed

--- a/eQuotationModule/src/main/resources/content/Language_en.properties
+++ b/eQuotationModule/src/main/resources/content/Language_en.properties
@@ -5,12 +5,12 @@ javax.portlet.title.eQuotationModule=eQuotationModule JSP Portlet
 
 eQuotationModule.caption=eQuotation Module
 
-#acion
-action.NEW=New
-action.DELETE=Delete
-action.EDIT=Edit
-action.READ=Read
-
+#actions
+#action.NEW=New
+#action.DELETE=Delete
+#action.EDIT=Edit
+#action.READ=Read
+action.GOODS_WORKS_SERVICES=Goods, works, services
 
 preparation=Preparation
 submission_of_proposals=Submission of proposals
@@ -38,7 +38,7 @@ bid_created = Created
 bid_last_modified = Last Modified
 #second block
 
-bid_general_info = General info
+bid_generalinfo = General info
 bid_number = Bid No.
 bid_number_value = Automatically generated
 bid_method = Bid method
@@ -56,7 +56,7 @@ bid_contact_information = CONTACT INFORMATION
 bid_contact_name = Contact person
 
 #bid opening
-
+bid_opening=Opening and determining winner
 #first block
 
 bid_date_publication = Estimated date of publication of the order
@@ -66,7 +66,7 @@ bid_date_publication = Estimated date of publication of the order
 bid_date_submission = The date and time for the submission of applications
 
 #bid aboutinfo
-
+bid_aboutinfo=Information about location
 #first block
 
 bid_title_delivery_address=PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
@@ -127,7 +127,9 @@ bid_assignment_lot_delivery =
 bid_assignment_lot_conditions = 
 
 # listlots
-
+bid_listlots=List of lots
+# commission
+bid_commission=Commission
 # one
 geniralinformation = GENERAL INFORMATION
 lot_number = Lot number
