add  Publish and  Approve for bid

--- a/SupplierWorkplace/src/main/resources/content/Language_ru.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language_ru.properties
@@ -12,7 +12,7 @@ SupplierWorkplace.caption=Hello from SupplierWorkplace JSP!
 #action.DELETE=Delete
 #action.EDIT=Edit
 #action.READ=Read
-
+action.order_details = \u0421\u0432\u0435\u0434\u0435\u043D\u0438\u044F \u0437\u0430\u043A\u0430\u0437\u0430
 # naimenovanie 
 filing_applications=\u041F\u041E\u0414\u0410\u0427\u0410 \u0417\u0410\u042F\u0412\u041E\u041A 
 opening_and_determining_the_winner=\u0412\u0421\u041A\u0420\u042B\u0422\u0418\u0415 \u0418 \u041E\u041F\u0420\u0415\u0414\u0415\u041B\u0415\u041D\u0418\u0415 \u041F\u041E\u0411\u0415\u0414\u0418\u0422\u0415\u041B\u042F
