--- a/SupplierWorkplace/src/main/resources/content/Language_ru.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language_ru.properties
@@ -32,6 +32,55 @@ application=\u0417\u0410\u042F\u0412\u041A\u0410
 other_information=\u041F\u0420\u041E\u0427\u0410\u042F \u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F
 documentation=\u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u042F
 
+list_goods=\u0421\u041F\u0418\u0421\u041E\u041A \u0422\u041E\u0412\u0410\u0420\u041E\u0412
+
+No=\u2116
+customer_request=\u0417\u0430\u043F\u0440\u043E\u0441 \u0437\u0430\u043A\u0430\u0437\u0447\u0438\u043A\u0430
+belonging_okgz=\u041F\u0440\u0438\u043D\u0430\u0434\u043B\u0435\u0436\u043D\u043E\u0441\u0442\u044C \u043F\u043E \u041E\u041A\u0413\u0417
+code_okgz=\u041A\u043E\u0434 \u041E\u041A\u0413\u0417
+description_goods=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0442\u043E\u0432\u0430\u0440\u0430 (\u0424\u043E\u0440\u043C\u0430 \u0432\u044B\u043F\u0443\u0441\u043A\u0430)
+unit_measure=\u0415\u0434\u0438\u043D\u0438\u0446\u0430 \u0438\u0437\u043C\u0435\u0440\u0435\u043D\u0438\u044F
+quantity=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E
+country_origin=\u0421\u0442\u0440\u0430\u043D\u0430 \u043F\u0440\u043E\u0438\u0441\u0445\u043E\u0436\u0434\u0435\u043D\u0438\u044F
+
+#document naimenovanie
+documentation=\u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u042F
+documentation2=\u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u042F
+number_lot=\u041D\u043E\u043C\u0435\u0440 \u043B\u043E\u0442\u0430:
+item_name=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043B\u043E\u0442\u0430:
+documents_name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+qualification_requirements=\u041A\u0432\u0430\u043B\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0435 \u0442\u0440\u0435\u0431\u043E\u0432\u0430\u043D\u0438\u044F
+conditions=\u0423\u0441\u043B\u043E\u0432\u0438\u044F
+
+#TAKEPART
+take_part=\u041F\u0440\u0438\u043D\u0438\u043C\u0430\u0442\u044C \u0443\u0447\u0430\u0441\u0442\u0438\u0435
+current_account=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u0441\u0447\u0435\u0442
+balance_information=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E \u0431\u0430\u043B\u0430\u043D\u0441\u0435
+
+#docum
+list_documents=\u0421\u041F\u0418\u0421\u041E\u041A \u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u041E\u0412
+download_documentation=\u0417\u0410\u0413\u0420\u0423\u0417\u041A\u0410 \u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u0418
+documents_name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 
+file=\u0424\u0430\u0439\u043B
+download_documents=\u0417\u0410\u0413\u0420\u0423\u0417\u041A\u0410 \u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u0418
+
+#info lot
+information_lot=\u0421\u0412\u0415\u0414\u0415\u041D\u0418\u0415 \u041E \u041B\u041E\u0422\u0415 \u21161
+
+generalinfo=\u041E\u0411\u0429\u0410\u042F \u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F
+number_of_lot=\u041D\u043E\u043C\u0435\u0440 \u043B\u043E\u0442\u0430
+item_name=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043B\u043E\u0442\u0430
+classification_ebc=\u041A\u043B\u0430\u0441\u0441\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044F \u043F\u043E \u042D\u0411\u041A 
+
+
+info_about_customer=\u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F \u041E \u0417\u0410\u041A\u0410\u0417\u0427\u0418\u041A\u0415 
+procuring_entity=\u0417\u0430\u043A\u0443\u043F\u0430\u044E\u0449\u0430\u044F \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u044F
+bsc_vbk=\u041A\u043E\u0434 \u041F\u0411\u0421 \u043F\u043E \u0412\u0411\u041A
+
+bid_enforcement=\u041E\u0411\u0415\u0421\u041F\u0415\u0427\u0415\u041D\u0418\u0415 \u0418\u0421\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u041A\u041E\u041D\u0422\u0420\u0410\u041A\u0422\u0410
+other_conditions=\u041F\u0420\u041E\u0427\u0418\u0415 \u0423\u0421\u041B\u041E\u0412\u0418\u042F
+
+
 preparation=Preparation
 submission_of_proposals=Submission of proposals
 evaluation_and_awarding=Evaluation and awarding
@@ -44,47 +93,50 @@ actions_bid=Actions
 
 #first block
 
-bid_title_delivery_address=PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
-delivery_address = DELIVERY ADDRESS
+bid_title_delivery_address=\u041C\u0415\u0421\u0422\u041E \u041F\u041E\u0421\u0422\u0410\u0412\u041A\u0418 \u0422\u041E\u0412\u0410\u0420\u0410 \u0412\u042B\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u0420\u0410\u0411\u041E\u0422, \u041E\u041A\u0410\u0417\u0410\u041D\u0418\u042F \u0423\u0421\u041B\u0423\u0413
+delivery_address=\u041C\u0415\u0421\u0422\u041E \u041F\u041E\u0421\u0422\u0410\u0412\u041A\u0418
 bid_delivery_address =
 #block first,second 
 bid_task_each = Assignment for each lot separately
 bid_task_whole = Assignment for the entire order
 
 #second block
-
-bid_title_delivery_time = TERM DELIVERY OF GOODS, WORKS AND SERVICES
-delivery_time = DELIVER TIME
+bid_title_delivery_time=\u041C\u0415\u0421\u0422\u041E \u041F\u041E\u0421\u0422\u0410\u0412\u041A\u0418 \u0422\u041E\u0412\u0410\u0420\u0410 \u0412\u042B\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u0420\u0410\u0411\u041E\u0422, \u041E\u041A\u0410\u0417\u0410\u041D\u0418\u042F \u0423\u0421\u041B\u0423\u0413
+delivery_time=\u0421\u0420\u041E\u041A \u041F\u041E\u0421\u0422\u0410\u0412\u041A\u0418
 bid_delivery_time = 
 
 #third block
 
-validity = VALIDITY
-bid_validity_tenders = 
+validity=\u0421\u0420\u041E\u041A \u0414\u0415\u0419\u0421\u0422\u0412\u0418\u042F \u0422\u0415\u041D\u0414\u0415\u0420\u041D\u041E\u0419 \u0417\u0410\u042F\u0412\u041A\u0418
+
+
 #fourth
  
-software_application = SOFTWARE APPLICATION
-
+software_application=\u041E\u0411\u0415\u0421\u041F\u0415\u0427\u0415\u041D\u0418\u0415 \u0417\u0410\u042F\u0412\u041A\u0418
 bid_the_task_for_each_lot_separately = Assignment for each lot separately
 bid_the_task_for_the_whole_order = Assignment for the entire order
-bid_ensuring_the_application_is_not_required = Term and procedure for granting security of an application
-bid_bonds = Bonds
-bid_bank_guarantee = Bank guarantee
-bid_paper = Paper
-bid_deposits = deposits
-bid_Free_float = Free float
-bid_percentage = Percentage %
-big_term_and_procedure_of_the_software_application = Term and procedure of the software application
+bid_ensuring_the_application_is_not_required=\u041E\u0431\u0435\u0441\u043F\u0435\u0447\u0435\u043D\u0438\u0435 \u0437\u0430\u044F\u0432\u043A\u0438 \u043D\u0435 \u0442\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044F
+bid_bonds=\u041E\u0431\u043B\u0438\u0433\u0430\u0446\u0438\u0438
+bid_bank_guarantee=\u0411\u0430\u043D\u043A\u043E\u0432\u0441\u043A\u0430\u044F \u0433\u0430\u0440\u0430\u043D\u0442\u0438\u044F
+bid_paper=\u0412\u0435\u043A\u0441\u0435\u043B\u044F
+bid_deposits=\u0414\u0435\u043F\u043E\u0437\u0438\u0442\u044B
+bid_Free_float=\u0410\u043A\u0446\u0438\u0438 \u0432 \u0441\u0432\u043E\u0431\u043E\u0434\u043D\u043E\u043C \u043E\u0431\u0440\u0430\u0449\u0435\u043D\u0438\u0438
+bid_percentage=\u0412 \u043F\u0440\u043E\u0446\u0435\u043D\u0442\u0430\u0445
+big_term_and_procedure_of_the_software_application=\u0421\u0440\u043E\u043A \u0438 \u043F\u043E\u0440\u044F\u0434\u043E\u043A \u043F\u0440\u0435\u0434\u043E\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u043E\u0431\u0435\u0441\u043F\u0435\u0447\u0435\u043D\u0438\u044F \u0437\u0430\u044F\u0432\u043A\u0438
 bid_percent_software_application = 
 bid_software_application =
+
+
+
+
 #five
-enforcement = Enforcement
+enforcement=\u041E\u0411\u0415\u0421\u041F\u0415\u0427\u0415\u041D\u0418\u0415 \u0418\u0421\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u041A\u041E\u041D\u0422\u0420\u0410\u041A\u0422\u0410
 bid_performance_contract=Performance contract
 bid_enforcement = 
 bid_percent_enforcement = 
 
 #six
-other_conditions = OTHER CONDITIONS
+other_conditions=\u041F\u0420\u041E\u0427\u0418\u0415 \u0423\u0421\u041B\u041E\u0412\u0418\u042F
 big_payment = Payment
 big_assignment_for_each_lot_separately = Assignment for each lot separately
 big_assignment_for_the_entire_order = Assignment for the entire order
@@ -96,7 +148,7 @@ bid_assignment_lot_delivery =
 bid_assignment_lot_conditions = 
 
 
-bid_general_info = General info
+
 bid_number = Bid No.
 bid_number_value = Automatically generated
 bid_method = Bid method
@@ -110,8 +162,7 @@ bid_number_ifb_a = Number IFB (A)
 bid_number_ifb_c = Number IFB (C)
 
 #source of financing
-source_financing = SOURCE FINANCING
+source_financing = \u0418\u0421\u0422\u041E\u0427\u041D\u0418\u041A \u0424\u0418\u041D\u0410\u041D\u0421\u0418\u0420\u041E\u0412\u0410\u041D\u0418\u042F
 local_budget_bid=Local budget
 bid_republican_budget = republican budget
 bid_own_funds = Own funds
-befor_participating = \u041F\u0435\u0440\u0435\u0434 \u0443\u0447\u0430\u0441\u0442\u0438\u0435\u043C \u0432 \u044D\u0442\u043E\u043C \u0437\u0430\u043A\u0430\u0437\u0435, \u0412\u0430\u043C \u043D\u0435\u043E\u0431\u0445\u043E\u0434\u0438\u043C\u043E \u043E\u043F\u043B\u0430\u0442\u0438\u0442\u044C {0} \u0441\u043E\u043C\u043E\u043D\u0438 \u0441 \u0412\u0430\u0448\u0435\u0433\u043E \u0441\u0447\u0435\u0442\u0430.
