--- a/SupplierWorkplace/src/main/resources/content/Language_ru.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language_ru.properties
@@ -115,3 +115,4 @@ local_budget_bid=Local budget
 bid_republican_budget = republican budget
 bid_own_funds = Own funds
 befor_participating = \u041F\u0435\u0440\u0435\u0434 \u0443\u0447\u0430\u0441\u0442\u0438\u0435\u043C \u0432 \u044D\u0442\u043E\u043C \u0437\u0430\u043A\u0430\u0437\u0435, \u0412\u0430\u043C \u043D\u0435\u043E\u0431\u0445\u043E\u0434\u0438\u043C\u043E \u043E\u043F\u043B\u0430\u0442\u0438\u0442\u044C {0} \u0441\u043E\u043C\u043E\u043D\u0438 \u0441 \u0412\u0430\u0448\u0435\u0433\u043E \u0441\u0447\u0435\u0442\u0430.
+the_price_for  = \u0446\u0435\u043D\u0430 \u0437\u0430
