--- a/SupplierWorkplace/bin/content/Language_ru.properties
+++ b/SupplierWorkplace/bin/content/Language_ru.properties
@@ -13,11 +13,19 @@ SupplierWorkplace.caption=Hello from SupplierWorkplace JSP!
 #action.EDIT=Edit
 #action.READ=Read
 action.order_details = \u0421\u0432\u0435\u0434\u0435\u043D\u0438\u044F \u0437\u0430\u043A\u0430\u0437\u0430
+actions_bid=
 # naimenovanie 
 filing_applications=\u041F\u041E\u0414\u0410\u0427\u0410 \u0417\u0410\u042F\u0412\u041E\u041A 
 opening_and_determining_the_winner=\u0412\u0421\u041A\u0420\u042B\u0422\u0418\u0415 \u0418 \u041E\u041F\u0420\u0415\u0414\u0415\u041B\u0415\u041D\u0418\u0415 \u041F\u041E\u0411\u0415\u0414\u0418\u0422\u0415\u041B\u042F
 incoming_orders=\u041D\u0415\u0421\u041E\u0421\u0422\u041E\u042F\u0412\u0428\u0418\u0415\u0421\u042F \u0417\u0410\u041A\u0410\u0417\u042B
 completed_orders=\u0417\u0410\u0412\u0415\u0420\u0428\u0415\u041D\u041D\u042B\u0415 \u0417\u0410\u041A\u0410\u0417\u042B
+bid_name=\u0420\u0435\u043A\u0432\u0438\u0437\u0438\u0442\u044B \u0437\u0430\u043A\u0430\u0437\u0430
+No= \u2116
+id_lot=\u2116
+naimenovanie_lota=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043B\u043E\u0442\u0430
+svedenija_lot=\u0421\u0412\u0415\u0414\u0415\u041D\u0418\u0415 \u041E \u041B\u041E\u0422\u0415 \u21161
+
+
 
 forming_application=\u0424\u043E\u0440\u043C\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0437\u0430\u044F\u0432\u043A\u0438
 lot_name=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043B\u043E\u0442\u0430
@@ -29,6 +37,9 @@ delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 info_docum=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0435
 
 application=\u0417\u0410\u042F\u0412\u041A\u0410
+list_goods=\u0421\u041F\u0418\u0421\u041E\u041A \u0422\u041E\u0412\u0410\u0420\u041E\u0412
+filing_an_application=\u041F\u041E\u0414\u0410\u0427\u0410 \u0417\u0410\u042F\u0412\u041E\u041A 
+
 other_information=\u041F\u0420\u041E\u0427\u0410\u042F \u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F
 documentation=\u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u042F
 document_name = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 
@@ -37,6 +48,11 @@ document = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 list_docum = \u0421\u041F\u0418\u0421\u041E\u041A \u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u041E\u0412
 download_docum = \u0417\u0410\u0413\u0420\u0423\u0417\u041A\u0410 \u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u0418
 
+documentation2=\u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u042F
+documents_name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+qualification_requirements=\u041A\u0432\u0430\u043B\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0435 \u0442\u0440\u0435\u0431\u043E\u0432\u0430\u043D\u0438\u044F
+delivery_conditions=\u0423\u0441\u043B\u043E\u0432\u0438\u044F \u043F\u043E\u0441\u0442\u0430\u0432\u043A\u0438
+
 preparation=Preparation
 submission_of_proposals=Submission of proposals
 evaluation_and_awarding=Evaluation and awarding
@@ -44,7 +60,7 @@ unfulfilled_tenders=Unfulfilled tenders
 completed_tenders=Completed tenders
 
 id_bid=No
-actions_bid=Actions
+actions_bid=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 
 
 #first block
@@ -57,30 +73,28 @@ bid_task_each = Assignment for each lot separately
 bid_task_whole = Assignment for the entire order
 
 #second block
-
-bid_title_delivery_time = TERM DELIVERY OF GOODS, WORKS AND SERVICES
 delivery_time = \u0421\u0420\u041E\u041A \u041F\u041E\u0421\u0422\u0410\u0412\u041A\u0418 \u0422\u041E\u0412\u0410\u0420\u0410, \u0412\u042B\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u0420\u0410\u0411\u041E\u0422, \u041E\u041A\u0410\u0417\u0410\u041D\u0418\u042F \u0423\u0421\u041B\u0423\u0413
+delivery=\u0421\u0440\u043E\u043A \u043F\u043E\u0441\u0442\u0430\u0432\u043A\u0438
 bid_delivery_time = 
 bid_conditions_of_customer = \u0423\u0441\u043B\u043E\u0432\u0438\u044F \u0437\u0430\u043A\u0430\u0437\u0447\u0438\u043A\u0430:
 
 #third block
-
 validity = \u0421\u0420\u041E\u041A \u0414\u0415\u0419\u0421\u0422\u0412\u0418\u042F \u0422\u0415\u041D\u0414\u0415\u0420\u041D\u041E\u0419 \u0417\u0410\u042F\u0412\u041A\u0418
+tenders=\u0421\u0440\u043E\u043A \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0442\u0435\u043D\u0434\u0435\u0440\u043D\u043E\u0439 \u0437\u0430\u044F\u0432\u043A\u0438
 bid_validity_tenders = 
-#fourth
- 
-software_application = \u041E\u0411\u0415\u0421\u041F\u0415\u0427\u0415\u041D\u0418\u0415 \u0417\u0410\u042F\u0412\u041A\u0418
 
+#fourth 
+software_application = \u041E\u0411\u0415\u0421\u041F\u0415\u0427\u0415\u041D\u0418\u0415 \u0417\u0410\u042F\u0412\u041A\u0418
 bid_own_offer = \u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u043E\u0435 \u043F\u0440\u0435\u0434\u043B\u043E\u0436\u0435\u043D\u0438\u0435
 bid_in_accordance_customer = \u0412 \u0441\u043E\u043E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0438\u0438 \u0441 \u0443\u0441\u043B\u043E\u0432\u0438\u044F\u043C\u0438 \u0437\u0430\u043A\u0430\u0437\u0447\u0438\u043A\u0430
-bid_ensuring_the_application_is_not_required = Term and procedure for granting security of an application
-bid_bonds = Bonds
-bid_bank_guarantee = Bank guarantee
-bid_paper = Paper
-bid_deposits = deposits
-bid_Free_float = Free float
-bid_percentage = Percentage %
-big_term_and_procedure_of_the_software_application = Term and procedure of the software application
+bid_ensuring_the_application_is_not_required =\u041E\u0431\u0435\u0441\u043F\u0435\u0447\u0435\u043D\u0438\u0435 \u0437\u0430\u044F\u0432\u043A\u0438 \u043D\u0435 \u0442\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044F
+bid_bonds =\u041E\u0431\u043B\u0438\u0433\u0430\u0446\u0438\u0438
+bid_bank_guarantee =\u0411\u0430\u043D\u043A\u043E\u0432\u0441\u043A\u0430\u044F \u0433\u0430\u0440\u0430\u043D\u0442\u0438\u044F
+bid_paper =\u0412\u0435\u043A\u0441\u0435\u043B\u044F
+bid_deposits =\u0414\u0435\u043F\u043E\u0437\u0438\u0442\u044B
+bid_Free_float =\u0410\u043A\u0446\u0438\u0438 \u0432 \u0441\u0432\u043E\u0431\u043E\u0434\u043D\u043E\u043C \u043E\u0431\u0440\u0430\u0449\u0435\u043D\u0438\u0438
+bid_percentage =\u0412 \u043F\u0440\u043E\u0446\u0435\u043D\u0442\u0430\u0445 %
+big_term_and_procedure_of_the_software_application = \u0421\u0440\u043E\u043A \u0438 \u043F\u043E\u0440\u044F\u0434\u043E\u043A \u043F\u0440\u0435\u0434\u043E\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u043E\u0431\u0435\u0441\u043F\u0435\u0447\u0435\u043D\u0438\u044F \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F \u043A\u043E\u043D\u0442\u0440\u0430\u043A\u0442\u0430
 bid_percent_software_application = 
 bid_software_application =
 #five
@@ -101,8 +115,11 @@ bid_assignment_lot_payment =
 bid_assignment_lot_delivery = 
 bid_assignment_lot_conditions = 
 
-
-bid_general_info = General info
+#general_info
+generalinfo =\u041E\u0411\u0429\u0410\u042F \u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F
+number_of_lot=\u041D\u043E\u043C\u0435\u0440 \u043B\u043E\u0442\u0430
+item_name=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043B\u043E\u0442\u0430
+classification_ebc=\u041A\u043B\u0430\u0441\u0441\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044F \u043F\u043E \u042D\u0411\u041A
 bid_number = Bid No.
 bid_number_value = Automatically generated
 bid_method = Bid method
@@ -116,7 +133,7 @@ bid_number_ifb_a = Number IFB (A)
 bid_number_ifb_c = Number IFB (C)
 
 #source of financing
-source_financing = SOURCE FINANCING
+source_financing=\u0418\u0421\u0422\u041E\u0427\u041D\u0418\u041A \u0424\u0418\u041D\u0410\u041D\u0421\u0418\u0420\u041E\u0412\u0410\u041D\u0418\u042F
 local_budget_bid=Local budget
 bid_republican_budget = republican budget
 bid_own_funds = Own funds
@@ -126,3 +143,11 @@ vendor-proposal = \u041F\u0440\u0435\u0434\u043B\u043E\u0436\u0435\u043D\u0438\u
 description-of-goods = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0442\u043E\u0432\u0430\u0440\u0430 (\u0424\u043E\u0440\u043C\u0430 \u0432\u044B\u043F\u0443\u0441\u043A\u0430)
 country-of-origin = \u0441\u0442\u0440\u0430\u043D\u0430 \u043F\u0440\u043E\u0438\u0441\u0445\u043E\u0436\u0434\u0435\u043D\u0438\u044F
 unit-price = \u0426\u0435\u043D\u0430 \u0437\u0430 \u0435\u0434\u0438\u043D\u0438\u0446\u0443
+
+#info about customer
+info_about_customer=\u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F \u041E \u0417\u0410\u041A\u0410\u0417\u0427\u0418\u041A\u0415
+procuring_entity=\u0417\u0430\u043A\u0443\u043F\u0430\u044E\u0449\u0430\u044F \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u044F
+bsc_vbk=\u041A\u043E\u0434 \u041F\u0411\u0421 \u043F\u043E \u0412\u0411\u041A
+
+
+
